--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "./src/server.ts",
+      "src": "package.json",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "server.ts"
     }
   ]
 }
